--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="features__items">
                 <div class="features__item">
                     <div class="features__item-img">
-                        <img src="/images/UI_UX_phone.svg" alt="UI_UX_phone">
+                        <img src="images/UI_UX_phone.svg" alt="UI_UX_phone">
                     </div>
                     <div class="features__item-title">
                         UI/UX Design
@@ -159,7 +159,7 @@
                 </div>
                 <div class="features__item">
                     <div class="features__item-img">
-                        <img src="/images/PC.svg" alt="PC">
+                        <img src="images/PC.svg" alt="PC">
                     </div>
                     <div class="features__item-title">
                         Web Development
@@ -171,7 +171,7 @@
                 </div>
                 <div class="features__item">
                     <div class="features__item-img">
-                        <img src="/images/App_for_phone.svg" alt="App_for_phone">
+                        <img src="images/App_for_phone.svg" alt="App_for_phone">
                     </div>
                     <div class="features__item-title">
                         App Development
@@ -202,12 +202,12 @@
                     </div>
                 </div>
                 <div class="work__descr-img">
-                    <img src="/images/Developers.svg" alt="Developers">
+                    <img src="images/Developers.svg" alt="Developers">
                 </div>
             </div>
             <div class="work__descr descr__sec2">
                 <div class="work__descr-img">
-                    <img src="/images/Information_Architect.png" alt="Information_Architect">
+                    <img src="images/Information_Architect.png" alt="Information_Architect">
                 </div>
                 <div class="work__descr-text section2">
                     <div class="work__descr-title">
@@ -239,7 +239,7 @@
                     </div>
                 </div>
                 <div class="work__descr-img">
-                    <img src="/images/Foundation.png" alt="Foundation">
+                    <img src="images/Foundation.png" alt="Foundation">
                 </div>
             </div>
         </div>
@@ -253,7 +253,7 @@
                 <div class="testimonial__client">
                     <div class="testimonial__client-bio">
                         <div class="testimonial__client-bio__img">
-                            <img src="/images/Client1.jpg" alt="Client1">
+                            <img src="images/Client1.jpg" alt="Client1">
                         </div>
                         <div class="testimonial__client-bio__place">
                             <div class="company">
@@ -276,7 +276,7 @@
                 <div class="testimonial__client">
                     <div class="testimonial__client-bio">
                         <div class="testimonial__client-bio__img">
-                            <img src="/images/Client2.jpg" alt="Client2">
+                            <img src="images/Client2.jpg" alt="Client2">
                         </div>
                         <div class="testimonial__client-bio__place">
                             <div class="company">
@@ -299,7 +299,7 @@
                 <div class="testimonial__client">
                     <div class="testimonial__client-bio">
                         <div class="testimonial__client-bio__img">
-                            <img src="/images/Client3.jpg" alt="Client3">
+                            <img src="images/Client3.jpg" alt="Client3">
                         </div>
                         <div class="testimonial__client-bio__place">
                             <div class="company">
@@ -339,9 +339,9 @@
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/js/slick.min.js"></script>
-    <script src="/js/slick.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/slick.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
